fixed the navigation overflow problem

--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -200,11 +200,10 @@ header.scrolled-nav{
 @media (max-width: 1024px) {
     .navlist {
         position: fixed;
-        right: 0;
+        left: 0;
         top: 55px;
         height: calc(100vh - 55px);
         width: 100vw;
-        left: 0;
         background-color: #ffffff;
         flex-direction: column;
         padding-top: 20px;
