--- a/css/navbar-shared.css
+++ b/css/navbar-shared.css
@@ -2,6 +2,7 @@ html,
 body {
     max-width: 100%;
     overflow-x: hidden;
+    width: 100%;
 }
 
 .logo-link {
@@ -18,7 +19,9 @@ header.scrolled-nav,
 header.beige-nav {
     background-color: #F5F2EF;
     max-width: 100vw;
+    width: 100%;
     overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 .navbar,
@@ -28,7 +31,9 @@ header.beige-nav {
 .navbar.beige-nav.scrolled-nav {
     background: #F5F2EF;
     max-width: 100vw;
+    width: 100%;
     overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 .navbar ul li {
@@ -57,11 +62,10 @@ header.beige-nav {
 @media only screen and (max-width:1110px) {
     .navlist {
         position: fixed;
-        right: 0;
+        left: 0;
         top: 55px;
         height: calc(100vh - 55px);
         width: 100vw;
-        left: 0;
         background-color: #ffffff;
         flex-direction: column;
         padding-top: 20px;
