--- a/css/portfoliostyle.css
+++ b/css/portfoliostyle.css
@@ -789,11 +789,10 @@ footer{
     /* Hide navlist by default and make it slide from right */
     .navlist {
         position: fixed;
-        right: 0;
+        left: 0;
         top: 55px;
         height: calc(100vh - 55px);
         width: 100vw;
-        left: 0;
         background-color: #8B7355;
         flex-direction: column;
         padding-top: 20px;
@@ -975,11 +974,10 @@ footer{
 
     .navlist {
         position: fixed;
-        right: 0;
+        left: 0;
         top: 55px;
         height: calc(100vh - 55px);
         width: 100vw;
-        left: 0;
         background-color: #8B7355;
         flex-direction: column;
         padding-top: 20px;
